fix(workflow): 修复bot触发的PR不应执行release preview
- 在job级别添加actor检查，排除github-actions[bot]和dependabot[bot]
- 移除无效的step级别检查
- 防止sync PR触发不必要的release流程

--- a/.github/workflows/pr-merged-develop.yml
+++ b/.github/workflows/pr-merged-develop.yml
@@ -9,8 +9,12 @@ on:
 
 jobs:
   trigger-release-preview:
-    # Only trigger for actual PR merges, not direct pushes
-    if: github.event.pull_request.merged == true && github.event.pull_request.number != null
+    # Only trigger for actual PR merges, not direct pushes, and skip bot-triggered events
+    if: |
+      github.event.pull_request.merged == true && 
+      github.event.pull_request.number != null &&
+      github.actor != 'github-actions[bot]' &&
+      github.actor != 'dependabot[bot]'
     runs-on: ubuntu-latest
     permissions:
       issues: write
@@ -24,11 +28,6 @@ jobs:
           ref: ${{ github.event.pull_request.base.ref }}
           fetch-depth: 0
           
-      - name: Skip if triggered by bot
-        if: github.actor == 'github-actions[bot]' || github.actor == 'dependabot[bot]'
-        run: |
-          echo "⏭️ Skipping workflow triggered by bot"
-          exit 0
           
       - name: Check for changesets
         id: check
