--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -355,7 +355,7 @@ jobs:
             PACKAGE_NAME=$(node -e "console.log(require('./package.json').name || '@unknown/package')")
             
             # Create changeset content
-            cat > "$FILENAME" << EOF
+            cat > "$FILENAME" <<-CHANGESET_END
 ---
 "${PACKAGE_NAME}": ${TYPE}
 ---
@@ -363,7 +363,7 @@ jobs:
 ${CHANGESET_MESSAGE}
 
 Contributed by @${PR_AUTHOR} via #${PR_NUMBER}
-EOF
+CHANGESET_END
             
             echo "Created Node.js changeset: $FILENAME"
           else
