fix(workflow): 使用printf替代heredoc避免语法错误
- 替换 heredoc (<<-EOF) 为 printf 命令
- 避免 GitHub Actions 中的 shell 语法兼容性问题
- 保持 changeset 文件格式不变
- 经过本地测试验证

--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -354,16 +354,16 @@ jobs:
             # Get package name from package.json
             PACKAGE_NAME=$(node -e "console.log(require('./package.json').name || '@unknown/package')")
             
-            # Create changeset content
-            cat > "$FILENAME" <<-CHANGESET_END
----
-"${PACKAGE_NAME}": ${TYPE}
----
-
-${CHANGESET_MESSAGE}
-
-Contributed by @${PR_AUTHOR} via #${PR_NUMBER}
-CHANGESET_END
+            # Create changeset content using printf to avoid heredoc issues
+            printf '%s\n' \
+              '---' \
+              "\"${PACKAGE_NAME}\": ${TYPE}" \
+              '---' \
+              '' \
+              "${CHANGESET_MESSAGE}" \
+              '' \
+              "Contributed by @${PR_AUTHOR} via #${PR_NUMBER}" \
+              > "$FILENAME"
             
             echo "Created Node.js changeset: $FILENAME"
           else
