fix(release): 使用git add -f绕过gitignore添加prerelease.lock
- prerelease.lock被加入gitignore防止误提交
- 但release workflow需要能够提交该文件
- 使用git add -f强制添加被gitignore的文件
- 这样既保护了日常开发又不影响release流程

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -609,7 +609,7 @@ jobs:
           }
           EOF
             
-            git add "$LOCK_FILE"
+            git add -f "$LOCK_FILE"  # Use -f to bypass .gitignore
             git diff --cached --quiet || git commit -m "chore: update version lock to $VERSION"
             git push
           fi
@@ -649,7 +649,7 @@ jobs:
           git checkout develop
           if [ -f ".changeset/prerelease.lock" ]; then
             rm ".changeset/prerelease.lock"
-            git add .changeset/prerelease.lock
+            git add -f .changeset/prerelease.lock  # Use -f to bypass .gitignore
             git commit -m "chore: remove prerelease.lock after release"
             git push origin develop
           fi
