refactor(workflow): 移除不必要的main到develop同步
基于Taylor科学管理原则的工作流优化：

问题分析：
- .changeset/.consumed文件在两个分支状态不同，总是冲突
- 同步PR增加了复杂性但没有实际价值
- changesets机制已经确保了版本管理的完整性

优化方案：
- 移除自动同步步骤
- 保持develop和main分支独立
- 减少CI/CD资源消耗
- 简化工作流程

效果：
- 消除了持续的合并冲突
- 工作流更加清晰高效
- 符合单向流动原则：develop → release → main

--- a/.github/workflows/pr-merged-main.yml
+++ b/.github/workflows/pr-merged-main.yml
@@ -88,52 +88,15 @@ jobs:
             
             console.log('✅ Triggered /release for production');
             
-      - name: Sync main back to develop
-        if: steps.check.outputs.is_release == 'true'
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
-          script: |
-            // Wait for release to complete
-            await new Promise(resolve => setTimeout(resolve, 10000));
-            
-            // Create a sync PR from main to develop
-            try {
-              const { data: pr } = await github.rest.pulls.create({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                title: '🔄 Sync: Merge main back to develop after release',
-                head: 'main',
-                base: 'develop',
-                body: `## Automated Sync
-                
-                This PR synchronizes changes from main back to develop after release.
-                
-                ### Changes included:
-                - Cleaned changesets
-                - Updated version numbers
-                - Release documentation
-                
-                ### Auto-merge:
-                This PR will be automatically merged to keep branches in sync.`
-              });
-              
-              console.log(`✅ Created sync PR #${pr.number}`);
-              
-              // Auto-merge the sync PR
-              await github.rest.pulls.merge({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: pr.number,
-                merge_method: 'merge',
-                commit_title: 'chore: sync main back to develop after release'
-              });
-              
-              console.log(`✅ Auto-merged sync PR #${pr.number}`);
-            } catch (error) {
-              console.log(`⚠️ Could not create/merge sync PR: ${error.message}`);
-              console.log('Manual sync may be required');
-            }
+      # Taylor工作流优化：移除不必要的同步
+      # 原因：
+      # 1. changesets机制已确保版本完整性
+      # 2. .consumed文件会持续产生冲突
+      # 3. develop和main分支职责明确，不需要同步
+      # 
+      # - name: Sync main back to develop (已禁用)
+      #   说明：如果将来需要恢复同步，取消下面的注释
+      #   注意：需要解决.changeset/.consumed的冲突问题
             
       - name: Delete release branch
         if: steps.check.outputs.is_release == 'true'
