fix(workflow): 修复Release和Deploy工作流的三个关键问题
1. 修复Release Created事件未触发问题
   - 使用PAT_TOKEN替代GITHUB_TOKEN创建Release
   - 修复checkout步骤使用正确的tag引用格式

2. 修复Deploy命令的版本号处理
   - 添加--version参数支持
   - beta/release部署时使用正确的版本号

3. 改进自动部署链
   - Release Created工作流传递版本号到Deploy命令
   - 确保beta版本号格式正确(带-beta.0后缀)

基于Taylor科学管理原则的系统性修复

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -350,8 +350,16 @@ jobs:
           echo "📦 Package: $PACKAGE_NAME"
           echo "📌 Current version: $CURRENT_VERSION"
 
+          # Handle version override from command (for beta/release)
+          OVERRIDE_VERSION="${{ steps.parse.outputs.version }}"
+          
+          if [ -n "$OVERRIDE_VERSION" ]; then
+            # Use the version from command (for beta/release deployments)
+            echo "📌 Using version from command: $OVERRIDE_VERSION"
+            npm version "$OVERRIDE_VERSION" --no-git-tag-version --allow-same-version
+            NEW_VERSION="$OVERRIDE_VERSION"
           # Handle dev tag with auto-increment
-          if [ "$TAG" = "dev" ]; then
+          elif [ "$TAG" = "dev" ]; then
             echo "🔄 Checking for existing dev versions..."
 
             # Get all published versions with dev tag
@@ -389,7 +397,7 @@ jobs:
             npm publish --tag "$TAG" --access public
 
             # Output the published version
-            if [ "$TAG" = "dev" ]; then
+            if [ -n "$NEW_VERSION" ]; then
               echo "published_version=$NEW_VERSION" >> $GITHUB_OUTPUT
             else
               echo "published_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
