fix(release): 完善PR合并后的checkout策略
问题分析：
- Release PR合并到main后，release分支被自动删除
- /release命令仍尝试checkout已删除的release分支
- 导致 'branch could not be found' 错误

解决方案：
- PR未合并：从release分支发布beta/rc版本
- PR已合并到main：从main分支发布正式版本
- 智能判断checkout策略，避免引用已删除的分支

这符合Git Flow最佳实践：
- Beta/RC: release/x.x.x分支
- Production: main分支

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,9 +92,29 @@ jobs:
               
               branch = pr.data.base.ref;  // Target branch (e.g., main)
               sourceBranch = pr.data.head.ref;  // Source branch (e.g., release/1.2.0)
+              
+              // 关键修复：检查PR是否已合并，决定checkout策略
+              if (pr.data.merged) {
+                // PR已合并
+                if (branch === 'main' && sourceBranch.startsWith('release/')) {
+                  // Release PR合并到main后，应该从main发布正式版
+                  console.log(`✅ Release PR merged to main, will checkout from main for production release`);
+                  core.setOutput('source_branch', 'main');
+                } else {
+                  // 其他情况使用目标分支
+                  console.log(`PR merged, using target branch: ${branch}`);
+                  core.setOutput('source_branch', branch);
+                }
+                core.setOutput('pr_merged', 'true');
+              } else {
+                // PR未合并，使用源分支（beta/rc发布）
+                console.log(`PR not merged, using source branch: ${sourceBranch}`);
+                core.setOutput('source_branch', sourceBranch);
+                core.setOutput('pr_merged', 'false');
+              }
+              
               core.setOutput('is_pr', 'true');
               core.setOutput('pr_number', context.issue.number);
-              core.setOutput('source_branch', sourceBranch);
             } else {
               // Issue comment - use default branch
               branch = context.payload.repository.default_branch;
