fix(release): 修复graduate不清理prerelease.lock的问题
问题分析：
- --graduate将预发布版本转为正式版本
- 但原有逻辑只在prerelease == ''时清理lock文件
- 导致graduate操作后lock文件未被清理

解决方案：
- 修改清理条件，增加graduate判断
- 当执行--graduate或发布正式版时都清理lock文件
- 确保prerelease.lock在版本转正后被正确移除

影响：
- graduate操作后自动清理lock文件
- 保持.changeset目录干净
- 符合工作流最佳实践

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -638,7 +638,7 @@ jobs:
         if: |
           steps.permissions.outputs.allowed == 'true' &&
           steps.parse.outputs.preview != 'true' &&
-          steps.parse.outputs.prerelease == '' &&
+          (steps.parse.outputs.prerelease == '' || steps.parse.outputs.graduate == 'true') &&
           steps.release.outputs.success == 'true'
         shell: bash
         run: |
