fix(workflow): 改用graduate命令将预发布版本转为正式版
优化工作流逻辑：
- release分支合并到main时版本号已确定
- 之前可能已发布beta或rc版本
- 使用graduate将预发布版本转为正式版
- 不再重新执行完整的release流程

改进效果：
- 语义更清晰：graduate表示版本转正
- 避免重复处理changesets
- 自动清理prerelease.lock
- 符合渐进式发布最佳实践

--- a/.github/workflows/pr-merged-main.yml
+++ b/.github/workflows/pr-merged-main.yml
@@ -78,15 +78,16 @@ jobs:
             // Wait for notification
             await new Promise(resolve => setTimeout(resolve, 1000));
             
-            // Create final release (without prerelease flag)
+            // Graduate prerelease to stable version
+            // 使用 --graduate 将 beta/rc 版本转为正式版
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: pr.number,
-              body: '/release'
+              body: '/release --graduate'
             });
             
-            console.log('✅ Triggered /release for production');
+            console.log('✅ Triggered /release --graduate to promote to stable version');
             
       # Taylor工作流优化：移除不必要的同步
       # 原因：
