ci: fix workflow YAML syntax error in latest.yml generation (#456)
Replace heredoc with printf to avoid YAML parser confusion in GitHub Actions.

The heredoc (<<YAMLEOF) syntax causes GitHub Actions YAML parser to treat
the heredoc content as part of the workflow YAML, resulting in syntax errors.

Using printf ensures clean YAML generation without parser conflicts.

Validated with: act -l --workflows .github/workflows/release-desktop.yml

--- a/.github/workflows/release-desktop.yml
+++ b/.github/workflows/release-desktop.yml
@@ -309,16 +309,9 @@ jobs:
           release_date=$(date -u +"%Y-%m-%dT%H:%M:%S.%3NZ")
 
           # 创建 latest.yml - 使用双引号包裹 sha512 确保单行
-          cat > latest.yml <<YAMLEOF
-version: ${version}
-files:
-  - url: ${signed_exe}
-    sha512: "${sha512_hash}"
-    size: ${file_size}
-path: ${signed_exe}
-sha512: "${sha512_hash}"
-releaseDate: '${release_date}'
-YAMLEOF
+          printf "version: %s\nfiles:\n  - url: %s\n    sha512: \"%s\"\n    size: %s\npath: %s\nsha512: \"%s\"\nreleaseDate: '%s'\n" \
+            "${version}" "${signed_exe}" "${sha512_hash}" "${file_size}" \
+            "${signed_exe}" "${sha512_hash}" "${release_date}" > latest.yml
 
           # 验证生成的 YAML 格式
           echo "Generated latest.yml:"
