feat: add config package to address service network configuration (#458) and auto-start (#370) (#460)
* feat(config): 初始化并封装开机自启动方法

* feat(desktop): 集成 config 包并封装开机自启动

* feat(desktop): 新增设置页面

* feat(config): 新增 ServerConfigManager 类

* feat(mcp-server): 集成 ServerConfigManager 持久化配置

* feat(desktop): 集成 ServerConfigManager 类

* feat(desktop): 新增到设置页面(#48)

* feat(config): 包版本更新到1.0.0并新增CHANGELOG

--- a/apps/desktop/electron-builder.yml
+++ b/apps/desktop/electron-builder.yml
@@ -42,7 +42,7 @@ mac:
 win:
   icon: assets/icons/icon.png
   artifactName: promptx-desktop-${version}-win32-${arch}.${ext}
-  requestedExecutionLevel: highestAvailable
+  requestedExecutionLevel: asInvoker
   target:
     - nsis
 
