--- a/apps/desktop/tsconfig.json
+++ b/apps/desktop/tsconfig.json
@@ -5,8 +5,24 @@
     "outDir": "./out",
     "composite": true,
     "moduleResolution": "node",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "jsx": "react-jsx",
+    "lib": ["ES2020", "DOM"],
+    "types": ["react", "react-dom"],
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["src/*"],
+      "@/*": ["src/view/*"],
+      "@/components/*": ["src/view/components/*"],
+      "@/lib/*": ["src/view/lib/*"],
+      "@/hooks/*": ["src/view/hooks/*"]
+    }
   },
-  "include": ["src/**/*"],
-  "exclude": ["out", "dist", "node_modules", "**/*.spec.ts", "**/*.test.ts"]
+  "include": ["src/**/*", "src/**/*.json"],
+  "exclude": ["out", "dist", "node_modules", "**/*.spec.ts", "**/*.test.ts"],
+  "references": [
+    { "path": "./tsconfig.node.json" }
+  ]
 }
