--- a/packages/resource/package.json
+++ b/packages/resource/package.json
@@ -27,6 +27,9 @@
     "minimatch": "^10.0.1",
     "semver": "^7.7.2"
   },
+  "optionalDependencies": {
+    "electron-util": "^0.17.2"
+  },
   "publishConfig": {
     "access": "public"
   },
