--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -38,15 +38,39 @@
     "dist": "pnpm package:mac"
   },
   "dependencies": {
+    "@promptx/config": "workspace:*",
     "@promptx/core": "workspace:*",
     "@promptx/mcp-server": "workspace:*",
-    "@promptx/config": "workspace:*",
-    "electron-updater": "^6.6.2"
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@tailwindcss/vite": "^4.1.16",
+    "auto-launch": "^5.0.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "electron-updater": "^6.6.2",
+    "i18next": "^23.15.1",
+    "lucide-react": "^0.552.0",
+    "next-themes": "^0.4.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^15.0.2",
+    "react-router-dom": "^6.8.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@types/auto-launch": "^5.0.4",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.0",
+    "autoprefixer": "^10.4.21",
     "electron": "32.2.7",
     "electron-builder": "^26.0.12",
     "electron-icon-builder": "^2.0.1",
-    "electron-vite": "^2.0.0"
+    "electron-vite": "^2.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16"
   }
 }
