fix(resource, desktop): 还原资源路径并修复系统角色激活问题 (#476)
- 还原 @promptx/resource 中的路径解析逻辑，解决因路径变更导致的资源加载失败问题。

- 修复了由于系统角色资源路径不正确，导致无法在应用中激活或使用的严重 bug。

- 优化资源管理页面，根据新的路径逻辑过滤系统内置资源，使其对普通用户不可见，仅保留用户自定义资源的管理功能。

--- a/apps/desktop/electron-builder-dev.yml
+++ b/apps/desktop/electron-builder-dev.yml
@@ -23,18 +23,7 @@ files:
   - "!**/{test,__tests__,tests,testing}"
   - "!**/{example,examples,docs,doc}"
   - "!**/*.{md,MD,markdown,txt}"
-  # 注意：资源文件现在从 packages 目录复制，不需要排除 node_modules 中的文件
-
-# 将资源文件作为额外资源复制到应用程序目录外
-extraResources:
-  - from: "../../packages/resource/dist/resources"
-    to: "resources"
-    filter: ["**/*"]
-  - from: "../../packages/resource/dist/registry.json"
-    to: "registry.json"
-
-# asar 配置 - 不需要特殊的 unpack 规则，因为资源文件不在 asar 中
-# asarUnpack:
+  - "node_modules/@promptx/resource/dist/resources/**/*"
 
 mac:
   category: public.app-category.developer-tools
